<resources>
    <string name="app_name">Passwd Manager</string>
    <string name="copy_button">Copy</string>
    <string name="edit_button">Edit</string>
    <string name="password_str">Password</string>
    <string name="login_str">Login</string>
    <string name="username_str">Username</string>
    <string name="unlock">UNLOCK</string>
    <string name="register">REGISTER</string>
    <string name="default_pin">Default pin</string>
    <string name="finish_setup">Finish setup</string>
    <string name="domain">Domain:</string>
    <string name="username">Username:</string>
    <string name="url">URL:</string>
    <string name="password">Password:</string>
    <string name="delete_record">Delete record</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="wrong_pin">Wrong pin</string>
    <string name="key_icon">key_icon</string>
    <string name="exit_account">Exit account</string>
    <string name="lock">LOCK</string>
    <string name="enable_fingerprint_authentication">Enable fingerprint authentication</string>
    <string name="fingerprint_title">Fingerprint authentication</string>
    <string name="negative_button">Cancel</string>
    <string name="change_pin">Change pin</string>
    <string name="url_icon" translatable="false">url_icon</string>
    <string name="password_icon" translatable="false">password_icon</string>
    <string name="username_icon" translatable="false">username_icon</string>
    <string name="OK" translatable="false">OK</string>
    <string name="error">Error</string>
    <string name="errorLoginMsg">Check network connection</string>
    <string name="failedLoginMsg">Wrong login or password</string>
    <string name="successLogin">Login success</string>
    <string name="failedRegMsg">User exists</string>
    <string name="successReg">Registration success</string>
    <string name="enter_new_pin">Enter new pin</string>
    <string name="enter_old_pin">Enter old pin</string>
    <string name="failedChangePin">Wrong current pin</string>
    <string name="successPinChanged">Pin changed successfully</string>
    <string name="changing_pin">Changing pin</string>
    <string name="copied">Copied</string>
    <string name="Search">Search</string>
</resources>
