<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AuthPart.AuthActivity"
    android:layout_gravity="center" >

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint ="@string/username_str"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/password"
            android:layout_below="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_str"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/login_button"
            android:layout_below="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_str" />
        <Button
            android:id="@+id/reg_switch_but"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@+id/login_button"
            android:text="@string/register"
            android:layout_centerHorizontal="true"
            />
</RelativeLayout>