<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Switch
        android:id="@+id/fingerprint_switch_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/enable_fingerprint_authentication"
        android:visibility="gone" />

    <Button
        android:id="@+id/change_pin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fingerprint_switch_settings"
        android:layout_marginBottom="8dp"
        android:text="@string/change_pin"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_pin_button"
        android:text="@string/exit_account"
        android:textAlignment="textStart" />

</RelativeLayout>