<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/domain_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/domain_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/domain"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/domain_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/domain_label"
            android:hint="@string/domain"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/username_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/domain_description"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/username_icon"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/username_icon"
            android:padding="12dp"
            android:src="@drawable/username_icon" />

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/username_icon"
            android:text="@string/username"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_label"
            android:layout_toEndOf="@id/username_icon"
            android:hint="@string/username_str"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/url_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_description"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/url_icon"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/url_icon"
            android:padding="12dp"
            android:src="@drawable/url_icon" />

        <TextView
            android:id="@+id/url_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/url_icon"
            android:text="@string/url"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/url_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/url_label"
            android:layout_toEndOf="@id/url_icon"
            android:hint="@string/url"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            android:textSize="16sp"
            tools:ignore="TextFields" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_description"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/password_icon"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/password_icon"
            android:padding="12dp"
            android:src="@drawable/pass_icon" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/password_icon"
            android:text="@string/password"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_label"
            android:layout_toEndOf="@id/password_icon"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/visibility_icon"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_save_icon" />
</RelativeLayout>